Very stubbornly tried to solve this using recursion. Part 1 was great. Part 2 was easy for the examples. However, when the large input ws used it would break it all... I got stuck with memory issues and used AI to help my progress

--- a/advent11_reactor2025.ipynb
+++ b/advent11_reactor2025.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "bd1651ed",
    "metadata": {},
    "outputs": [],
@@ -43,12 +43,107 @@
     "                        total+=0\n",
     "                else:\n",
     "                        total += recPaths(IDX, OUPX, IdxName)\n",
-    "        return total"
+    "        return total\n",
+    "\n",
+    "def recPathsComps(IDX, OUPX, currentName):\n",
+    "    idx = IDX.index(currentName)\n",
+    "    inputs2test = OUPX[idx]\n",
+    "\n",
+    "    paths = []\n",
+    "\n",
+    "    for IdxName in inputs2test:\n",
+    "        if IdxName == \"out\":\n",
+    "            # Base case: full path is [currentName, \"out\"]\n",
+    "            paths.append([currentName, \"out\"])\n",
+    "        else:\n",
+    "            # Recursive case: get all subpaths\n",
+    "            subpaths = recPathsComps(IDX, OUPX, IdxName)\n",
+    "\n",
+    "            # Prepend currentName to each returned path\n",
+    "            for sp in subpaths:\n",
+    "                paths.append([currentName] + sp)\n",
+    "\n",
+    "    return paths\n",
+    "\n",
+    "def recPathsCompsSum(IDX, OUPX, currentName, seen_fft=False, seen_dac=False):\n",
+    "    idx = IDX.index(currentName)\n",
+    "    inputs2test = OUPX[idx]\n",
+    "    print(currentName)\n",
+    "    # Update flags for this node\n",
+    "    if currentName == \"fft\":\n",
+    "        seen_fft = True\n",
+    "    if currentName == \"dac\":\n",
+    "        seen_dac = True\n",
+    "\n",
+    "    total = 0\n",
+    "\n",
+    "    for IdxName in inputs2test:\n",
+    "        if IdxName == \"out\":\n",
+    "            # Base case: check flags\n",
+    "            if seen_fft and seen_dac:\n",
+    "                total += 1\n",
+    "        else:\n",
+    "            # Recurse with updated flags\n",
+    "            total += recPathsCompsSum(IDX, OUPX, IdxName, seen_fft, seen_dac)\n",
+    "\n",
+    "#     return total. Used AI for this one, my other solutions kept being too emmory intensive.\n",
+    "def recPathsCompsSumAI(\n",
+    "    IDX, OUPX, currentName,\n",
+    "    seen_fft=False, seen_dac=False,\n",
+    "    memo=None, visiting=None,\n",
+    "    name_to_idx=None\n",
+    "):\n",
+    "    # Initialize shared structures once\n",
+    "    if memo is None:\n",
+    "        memo = {}\n",
+    "    if visiting is None:\n",
+    "        visiting = set()\n",
+    "    if name_to_idx is None:\n",
+    "        name_to_idx = {name: i for i, name in enumerate(IDX)}\n",
+    "\n",
+    "    # Cycle detection\n",
+    "    if currentName in visiting:\n",
+    "        return 0\n",
+    "\n",
+    "    # Memoization: key is (node, seen_fft, seen_dac)\n",
+    "    key = (currentName, seen_fft, seen_dac)\n",
+    "    if key in memo:\n",
+    "        return memo[key]\n",
+    "\n",
+    "    visiting.add(currentName)\n",
+    "\n",
+    "    # Update flags\n",
+    "    if currentName == \"fft\":\n",
+    "        seen_fft = True\n",
+    "    if currentName == \"dac\":\n",
+    "        seen_dac = True\n",
+    "\n",
+    "    idx = name_to_idx[currentName]\n",
+    "    children = OUPX[idx]\n",
+    "\n",
+    "    total = 0\n",
+    "\n",
+    "    for child in children:\n",
+    "        if child == \"out\":\n",
+    "            # Leaf: count if both flags seen\n",
+    "            if seen_fft and seen_dac:\n",
+    "                total += 1\n",
+    "        else:\n",
+    "            total += recPathsCompsSum(\n",
+    "                IDX, OUPX, child,\n",
+    "                seen_fft, seen_dac,\n",
+    "                memo, visiting,\n",
+    "                name_to_idx\n",
+    "            )\n",
+    "\n",
+    "    visiting.remove(currentName)\n",
+    "    memo[key] = total\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "9214e3df",
    "metadata": {},
    "outputs": [
@@ -63,6 +158,73 @@
    "source": [
     "ins, outs, inout= processInput(\"day11_tst.txt\")\n",
     "print(recPaths(ins,outs,\"you\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "214a1120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ins, outs, inout= processInput(\"day11_ex2.txt\")\n",
+    "all_paths = recPathsComps(ins,outs,\"svr\")\n",
+    "\n",
+    "goodPaths = 0\n",
+    "for pati in all_paths:\n",
+    "    if 'fft' in pati:\n",
+    "        if 'dac' in pati:\n",
+    "            goodPaths+=1\n",
+    "\n",
+    "print(goodPaths)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f5791fe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ins, outs, inout= processInput(\"day11_ex2.txt\")\n",
+    "all_pathsT = recPathsCompsSum(ins,outs,\"svr\")\n",
+    "print(all_pathsT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20758db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "420257875695750\n"
+     ]
+    }
+   ],
+   "source": [
+    "ins, outs, inout= processInput(\"day11_tst.txt\")\n",
+    "all_pathsT = recPathsCompsSumAI(ins,outs,\"svr\")\n",
+    "print(all_pathsT)"
    ]
   }
  ],
