Got help from Reddit for day10 part 2. Day 12 was weirdly too easy

--- a/advent10_factory_2025.ipynb
+++ b/advent10_factory_2025.ipynb
@@ -319,6 +319,68 @@
     "\n",
     "print(f\"Final result is {sum(finalResults)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "43b5c008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18960\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import cache\n",
+    "from itertools import combinations, product\n",
+    "\n",
+    "def patterns(coeffs: list[tuple[int, ...]]) -> dict[tuple[int, ...], dict[tuple[int, ...], int]]:\n",
+    "\tnum_buttons = len(coeffs)\n",
+    "\tnum_variables = len(coeffs[0])\n",
+    "\tout = {parity_pattern: {} for parity_pattern in product(range(2), repeat=num_variables)}\n",
+    "\tfor num_pressed_buttons in range(num_buttons+1):\n",
+    "\t\tfor buttons in combinations(range(num_buttons), num_pressed_buttons):\n",
+    "\t\t\tpattern = tuple(map(sum, zip((0,) * num_variables, *(coeffs[i] for i in buttons))))\n",
+    "\t\t\tparity_pattern = tuple(i%2 for i in pattern)\n",
+    "\t\t\tif pattern not in out[parity_pattern]:\n",
+    "\t\t\t\tout[parity_pattern][pattern] = num_pressed_buttons\n",
+    "\treturn out\n",
+    "\n",
+    "def solve_single(coeffs: list[tuple[int, ...]], goal: tuple[int, ...]) -> int:\n",
+    "\tpattern_costs = patterns(coeffs)\n",
+    "\t@cache\n",
+    "\tdef solve_single_aux(goal: tuple[int, ...]) -> int:\n",
+    "\t\tif all(i == 0 for i in goal): return 0\n",
+    "\t\tanswer = 1000000\n",
+    "\t\tfor pattern, pattern_cost in pattern_costs[tuple(i%2 for i in goal)].items():\n",
+    "\t\t\tif all(i <= j for i, j in zip(pattern, goal)):\n",
+    "\t\t\t\tnew_goal = tuple((j - i)//2 for i, j in zip(pattern, goal))\n",
+    "\t\t\t\tanswer = min(answer, pattern_cost + 2 * solve_single_aux(new_goal))\n",
+    "\t\treturn answer\n",
+    "\treturn solve_single_aux(goal)\n",
+    "\n",
+    "def solve(raw: str):\n",
+    "\tscore = 0\n",
+    "\tlines = raw.splitlines()\n",
+    "\tfor I, L in enumerate(lines, 1):\n",
+    "\t\t_, *coeffs, goal = L.split()\n",
+    "\t\tgoal = tuple(int(i) for i in goal[1:-1].split(\",\"))\n",
+    "\t\tcoeffs = [[int(i) for i in r[1:-1].split(\",\")] for r in coeffs]\n",
+    "\t\tcoeffs = [tuple(int(i in r) for i in range(len(goal))) for r in coeffs]\n",
+    "\n",
+    "\t\tsubscore = solve_single(coeffs, goal)\n",
+    "\t\t#print(f'Line {I}/{len(lines)}: answer {subscore}')\n",
+    "\t\tscore += subscore\n",
+    "\tprint(score)\n",
+    "\n",
+    "with open(\"day10_tst.txt\", 'r') as f:\n",
+    "        content = f.read()\n",
+    "solve(content)\n"
+   ]
   }
  ],
  "metadata": {
