Solution from Reddit for Day 10 part2.

--- a/advent10_factory_2025.ipynb
+++ b/advent10_factory_2025.ipynb
@@ -322,8 +322,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "43b5c008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import cache\n",
+    "from itertools import combinations, product\n",
+    "\n",
+    "def build_pattern_table(button_vectors: list[tuple[int, ...]]) -> dict[tuple[int, ...], dict[tuple[int, ...], int]]:\n",
+    "    num_buttons = len(button_vectors)\n",
+    "    num_dims = len(button_vectors[0])\n",
+    "\n",
+    "    pattern_table = {\n",
+    "        parity: {} \n",
+    "        for parity in product(range(2), repeat=num_dims)\n",
+    "    }\n",
+    "\n",
+    "    for k in range(num_buttons + 1):\n",
+    "        for chosen in combinations(range(num_buttons), k):\n",
+    "            summed = tuple(\n",
+    "                map(sum, zip((0,) * num_dims, *(button_vectors[i] for i in chosen)))\n",
+    "            )\n",
+    "            parity = tuple(x % 2 for x in summed)\n",
+    "\n",
+    "            if summed not in pattern_table[parity]:\n",
+    "                pattern_table[parity][summed] = k\n",
+    "\n",
+    "    return pattern_table\n",
+    "\n",
+    "\n",
+    "def solve_target(button_vectors: list[tuple[int, ...]], target: tuple[int, ...]) -> int:\n",
+    "    pattern_table = build_pattern_table(button_vectors)\n",
+    "\n",
+    "    @cache\n",
+    "    def recurse(goal: tuple[int, ...]) -> int:\n",
+    "        if all(x == 0 for x in goal):\n",
+    "            return 0\n",
+    "\n",
+    "        best = 10**9\n",
+    "        parity = tuple(x % 2 for x in goal)\n",
+    "\n",
+    "        for pattern, cost in pattern_table[parity].items():\n",
+    "            if all(p <= g for p, g in zip(pattern, goal)):\n",
+    "                new_goal = tuple((g - p) // 2 for p, g in zip(pattern, goal))\n",
+    "                best = min(best, cost + 2 * recurse(new_goal))\n",
+    "\n",
+    "        return best\n",
+    "\n",
+    "    return recurse(target)\n",
+    "\n",
+    "\n",
+    "def solve_input(raw: str):\n",
+    "    total = 0\n",
+    "    lines = raw.splitlines()\n",
+    "\n",
+    "    for idx, line in enumerate(lines, 1):\n",
+    "        _, *vecs, tgt = line.split()\n",
+    "\n",
+    "        target = tuple(int(x) for x in tgt[1:-1].split(\",\"))\n",
+    "        vecs = [[int(x) for x in v[1:-1].split(\",\")] for v in vecs]\n",
+    "\n",
+    "        # Convert to indicator vectors\n",
+    "        button_vectors = [\n",
+    "            tuple(int(dim in row) for dim in range(len(target)))\n",
+    "            for row in vecs\n",
+    "        ]\n",
+    "\n",
+    "        score = solve_target(button_vectors, target)\n",
+    "        total += score\n",
+    "\n",
+    "    print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dfb89660",
    "metadata": {},
    "outputs": [
     {
@@ -335,51 +410,10 @@
     }
    ],
    "source": [
-    "from functools import cache\n",
-    "from itertools import combinations, product\n",
-    "\n",
-    "def patterns(coeffs: list[tuple[int, ...]]) -> dict[tuple[int, ...], dict[tuple[int, ...], int]]:\n",
-    "\tnum_buttons = len(coeffs)\n",
-    "\tnum_variables = len(coeffs[0])\n",
-    "\tout = {parity_pattern: {} for parity_pattern in product(range(2), repeat=num_variables)}\n",
-    "\tfor num_pressed_buttons in range(num_buttons+1):\n",
-    "\t\tfor buttons in combinations(range(num_buttons), num_pressed_buttons):\n",
-    "\t\t\tpattern = tuple(map(sum, zip((0,) * num_variables, *(coeffs[i] for i in buttons))))\n",
-    "\t\t\tparity_pattern = tuple(i%2 for i in pattern)\n",
-    "\t\t\tif pattern not in out[parity_pattern]:\n",
-    "\t\t\t\tout[parity_pattern][pattern] = num_pressed_buttons\n",
-    "\treturn out\n",
-    "\n",
-    "def solve_single(coeffs: list[tuple[int, ...]], goal: tuple[int, ...]) -> int:\n",
-    "\tpattern_costs = patterns(coeffs)\n",
-    "\t@cache\n",
-    "\tdef solve_single_aux(goal: tuple[int, ...]) -> int:\n",
-    "\t\tif all(i == 0 for i in goal): return 0\n",
-    "\t\tanswer = 1000000\n",
-    "\t\tfor pattern, pattern_cost in pattern_costs[tuple(i%2 for i in goal)].items():\n",
-    "\t\t\tif all(i <= j for i, j in zip(pattern, goal)):\n",
-    "\t\t\t\tnew_goal = tuple((j - i)//2 for i, j in zip(pattern, goal))\n",
-    "\t\t\t\tanswer = min(answer, pattern_cost + 2 * solve_single_aux(new_goal))\n",
-    "\t\treturn answer\n",
-    "\treturn solve_single_aux(goal)\n",
-    "\n",
-    "def solve(raw: str):\n",
-    "\tscore = 0\n",
-    "\tlines = raw.splitlines()\n",
-    "\tfor I, L in enumerate(lines, 1):\n",
-    "\t\t_, *coeffs, goal = L.split()\n",
-    "\t\tgoal = tuple(int(i) for i in goal[1:-1].split(\",\"))\n",
-    "\t\tcoeffs = [[int(i) for i in r[1:-1].split(\",\")] for r in coeffs]\n",
-    "\t\tcoeffs = [tuple(int(i in r) for i in range(len(goal))) for r in coeffs]\n",
-    "\n",
-    "\t\tsubscore = solve_single(coeffs, goal)\n",
-    "\t\t#print(f'Line {I}/{len(lines)}: answer {subscore}')\n",
-    "\t\tscore += subscore\n",
-    "\tprint(score)\n",
     "\n",
     "with open(\"day10_tst.txt\", 'r') as f:\n",
     "        content = f.read()\n",
-    "solve(content)\n"
+    "solve_input(content)"
    ]
   }
  ],
